Fixes blurry button in API

--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -2,5 +2,8 @@
   position: relative;
   font-size: 14px;
   font-family: Roboto, sans-serif;
+  button {
+    text-shadow: none;
+  }
   @import (less) "tmp.css";
 }
